--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
@@ -37,6 +37,7 @@
              Text="@(SelectedItemValue.Name)"
              Title="@(I18n.T("Location.Rename"))"
              Placeholder="@(I18n.T("Location.Placeholder"))"
+             MaxLength="50"
              OnOK="ConfirmRename">
 </InputDialog>
 
