--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/LocationSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/LocationSettingPage.razor
@@ -16,5 +16,6 @@
 <InputDialog @bind-Visible="showAdd"
              Title="@(I18n.T("Location.Add"))"
              Placeholder="@(I18n.T("Location.Placeholder"))"
+             MaxLength="50"
              OnOK="SaveAdd">
 </InputDialog>
