♻️ refactor(SearchTextField): Parameter OnChanged rename OnInput

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/SearchTextField/SearchTextField.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/SearchTextField/SearchTextField.razor
@@ -12,7 +12,8 @@ else
 {
     <MTextField TValue="string"
                 Value="Value"
-                ValueChanged="InternalSearchChanged"
+                ValueChanged="InternalValueChanged"
+                OnInput="OnInput"
                 Class="rounded-lg"
                 BackgroundColor="transparent"
                 Solo="true"
