--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
@@ -10,7 +10,7 @@
     <SearchTextField @bind-Value="search"
                      Visible="true"
                      Placeholder="@(I18n.T("SearchAppFunction.Placeholder"))"
-                     OnChanged="UpdateAppFunctions">
+                     OnInput="UpdateAppFunctions">
     </SearchTextField>
 </MyAppBar>
 
