🐛 fix: avatar should not be filled

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -22,7 +22,7 @@
                     <MListItemAvatar Class="ml-sm-2 ml-md-4 mr-md-6"
                                      Rounded="@("lg")"
                                      Size="70">
-                        <img src="@(avatar)" @onclick="()=>showPreviewImage=true" @onclick:stopPropagation="true" />
+                        <img class="user-avatar" src="@(avatar)" @onclick="()=>showPreviewImage=true" @onclick:stopPropagation="true" />
                     </MListItemAvatar>
                     <MListItemContent>
                         <MListItemTitle Class="text-h6 font-weight-bold">
