🐛 fix(DiaryCard): Content not updated when returning

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -6,7 +6,7 @@
        Elevation="0"
        Ripple="false"
        Rounded="@("lg")">
-    <MListItem Style="height:60px;" Dense>
+    <MListItem Dense>
         <MListItemContent>
             <div class="d-flex align-center">
                 <span class="text--secondary mr-3" style="font-size:1.1rem;">
