💄 style: update a little style

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardIcon.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardIcon.razor
@@ -2,7 +2,7 @@
 
 @if (!string.IsNullOrEmpty(Value))
 {
-    <MIcon Class="ml-2">
+    <MIcon Class="ml-2" Size="20">
         @Value
     </MIcon>
 }
