--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -134,6 +134,7 @@
                 @foreach (var item in Tags)
                 {
                     <MChip @key="item.Id"
+                           Style="pointer-events:none;"
                            Outlined="true">
                         @(item.Name)
                     </MChip>
