--- a/src/SwashbucklerDiary.Maui/App.xaml
+++ b/src/SwashbucklerDiary.Maui/App.xaml
@@ -2,9 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SwashbucklerDiary.Maui"
-             x:Class="SwashbucklerDiary.Maui.App"
-             xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
-             android:Application.WindowSoftInputModeAdjust="Resize">
+             x:Class="SwashbucklerDiary.Maui.App">
     <Application.Resources>
         <ResourceDictionary>
 
