--- a/src/SwashbucklerDiary.Maui/wwwroot/css/status-bar-and-navigation-bar.css
+++ b/src/SwashbucklerDiary.Maui/wwwroot/css/status-bar-and-navigation-bar.css
@@ -1,6 +1,8 @@
 ﻿body {
     padding-top: var(--android-status-bar-height);
     padding-bottom: var(--android-navigation-bar-height);
+    padding-left: var(--android-safe-area-left-width);
+    padding-right: var(--android-safe-area-right-width);
 }
 
 .m-application__wrap {
@@ -25,9 +27,12 @@
         background-color: var( --m-theme-surface);
     }
 
-
 .m-bottom-navigation-hidden {
     transform: translateY(calc(100% + var(--android-navigation-bar-height))) !important;
+}
+
+.m-navigation-drawer {
+    left: var(--android-safe-area-left-width);
 }
 
 .m-bottom-sheet.m-dialog .m-card::after {
@@ -44,41 +49,50 @@
 
 .m-dialog.m-dialog--active.m-dialog--fullscreen .m-card {
     padding-top: var(--android-status-bar-height) !important;
+    padding-left: var(--android-safe-area-left-width) !important;
+    padding-right: var(--android-safe-area-right-width) !important;
 }
 
 @supports (-webkit-touch-callout: none) {
     body {
         padding-top: env(safe-area-inset-top);
         padding-bottom: env(safe-area-inset-bottom);
+        padding-left: env(safe-area-inset-left);
+        padding-right: env(safe-area-inset-right);
     }
-    
+
     .m-application__wrap {
         min-height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
     }
-    
+
     .m-item-group.m-bottom-navigation {
         margin-bottom: env(safe-area-inset-bottom);
     }
-    
+
         .m-item-group.m-bottom-navigation::after {
             height: env(safe-area-inset-bottom);
             bottom: calc(0px - env(safe-area-inset-bottom));
         }
-    
-    
+
     .m-bottom-navigation-hidden {
         transform: translateY(calc(100% + env(safe-area-inset-bottom))) !important;
     }
-    
+
+    .m-navigation-drawer {
+        left: env(safe-area-inset-left);
+    }
+
     .m-bottom-sheet.m-dialog .m-card::after {
         height: env(safe-area-inset-bottom);
     }
-    
+
     .m-enqueued-snackbars.m-enqueued-snackbars--bottom::after {
         height: env(safe-area-inset-bottom);
     }
-    
+
     .m-dialog.m-dialog--active.m-dialog--fullscreen .m-card {
         padding-top: env(safe-area-inset-top) !important;
+        padding-left: env(safe-area-inset-left) !important;
+        padding-right: env(safe-area-inset-right) !important;
     }
 }
