🆕 feat: edit diary autofocus

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MarkdownEdit/MarkdownEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MarkdownEdit/MarkdownEdit.razor
@@ -2,7 +2,7 @@
 @inherits MyComponentBase
 
 <div class="@WrapClass">
-    <MMarkdown @ref="MMarkdown"
+    <MMarkdown @ref="mMarkdown"
                Value="@Value"
                ValueChanged="ValueChanged"
                Class="@Class"
