--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TextareaEdit/TextareaEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TextareaEdit/TextareaEdit.razor
@@ -9,6 +9,7 @@
            BackgroundColor="transparent"
            HideDetails="@("auto")"
            NoResize="true"
+           Autofocus="Autofocus"
            spellcheck="false"
            Placeholder="@(I18n.T("Write.ContentPlace"))">
 </MTextarea>
