🆕 feat: privacy mode

--- a/src/SwashbucklerDiary.Rcl/Layout/FirstLaunchDialog/FirstLaunchAgreement.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/FirstLaunchDialog/FirstLaunchAgreement.razor
@@ -12,7 +12,7 @@
     </MContainer>
 
     <div class="d-flex flex-column flex-sm-row-reverse">
-        <MButton Class="agreement-confirm-btn mb-5 flex-grow-1 ml-sm-2"
+        <MButton Class="black-white-btn mb-5 flex-grow-1 ml-sm-2"
                  Rounded="true"
                  Large="true"
                  OnClick="OnOK">
