--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
@@ -294,9 +294,16 @@
     }
 
 .m-application--is-ltr .m-card .m-list-item__action:first-child, .m-application--is-ltr .m-card .m-list-item__icon:first-child {
-    margin-right: 24px;
+    margin-right: 20px;
 }
 
 .m-application--is-rtl .m-card .m-list-item__action:first-child, .m-application--is-rtl .m-card .m-list-item__icon:first-child {
-    margin-left: 24px;
+    margin-left: 20px;
+}
+
+.m-list-item__subtitle {
+    white-space: initial;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
 }
