Update App Icon

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -15,7 +15,7 @@
                 <MListItemAvatar Class="mr-8 hidden-xs-only"
                                  Rounded="@("lg")"
                                  Size="75">
-                    <img src="@($"_content/{Essentials.StaticWebAssets.RclAssemblyName}/logo/logo.svg")" />
+                    <img src="@($"_content/{Essentials.StaticWebAssets.RclAssemblyName}/logo/logo.jpg")" />
                 </MListItemAvatar>
                 <MListItemContent>
                     <MListItemTitle Class="text-h5 my-2 font-weight-bold">
