🆕 feat: Pop up instructions when the client applies for permissions

--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -19,6 +19,7 @@
                     <MainLayoutBottomNav Items="NavigationButtons"></MainLayoutBottomNav>
 
                     <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
+                    <PermissionSnackbar></PermissionSnackbar>
                 </ChildContent>
 
                 <ErrorContent>
